# doccano

backend/: pyproject.toml
docker/: Dockerfile  Dockerfile.nginx  Dockerfile.prod  docker-compose.prod.yml
frontend/: package.json  pnpm-lock.yaml
